<resources>
    <string name="app_name">Note</string>
    <string name="my_notes">My Note</string>
    <string name="note_bottom">Note</string>
    <string name="reminder_bottom">Reminder</string>
    <string name="search_notes">Search Notes</string>
    <string name="addnote">Add</string>
    <string name="title">Title</string>
    <string name="content">Note</string>
    <string name="Subtitle">Description</string>
    <string name="Tools">More</string>
    <string name="SelectColor">Select Color</string>
    <string name="search_reminder">Search Reminder</string>
    <string name="contentR">Description</string>
    <string name="add_image">Add Image</string>
    <string name="add_URL">Add URL</string>
    <string name="deleteNote">Delete</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="my_reminder">My Reminder</string>
    <string name="delete_Note">Delete Note</string>
    <string name="isdelete">Are you sure you want to delete this note ?</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="enter_here">Enter here....</string>
    <string name="add_description">Add descriptions</string>
    <string name="set_date_time">Set date time</string>
    <string name="mark_completed">Mark completed</string>
</resources>