<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_deleteNote"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroud_search"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_5sdp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/iconDelete"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhite"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/iconDelete"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/delete_Note"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iconDelete"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/isdelete"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/ubuntu_regular"
        android:background="@null"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        />

    <TextView
        android:id="@+id/txtyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textQuestion"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_30sdp" />

    <TextView
        android:id="@+id/txtDCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorIcon"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintEnd_toStartOf="@id/txtyes"
        app:layout_constraintTop_toBottomOf="@id/textQuestion"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp" />
</androidx.constraintlayout.widget.ConstraintLayout>