<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtMyReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/my_reminder"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_25sdp"
            />

        <LinearLayout
            android:id="@+id/layoutSearchR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/backgroud_search"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">

            <ImageView
                android:id="@+id/imgSearchR"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search"
                app:tint="@color/colorIcon">
            </ImageView>

            <EditText
                android:id="@+id/edtSearchR"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/search_reminder"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textCapSentences"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13sdp"
                android:layout_marginLeft="@dimen/_12sdp" />
        </LinearLayout>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshReminder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lvReminderData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/_10sdp"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </LinearLayout>


    <ImageView
        android:id="@+id/btnAddReminder"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/_8sdp"
        android:src="@drawable/ic_add"
        app:tint="@color/colorNoteColor2"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/backgroud_add_button"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>