<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroud_search">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content_Edit_Reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/imgBackEditReminder"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            app:srcCompat="@drawable/icbackk"
            app:tint="@color/colorIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <ImageView
            android:id="@+id/imgSaveEditReminder"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            app:srcCompat="@android:drawable/ic_menu_save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <TextView
            android:id="@+id/txtTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_reminder"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/colorIcon"
            app:layout_constraintTop_toBottomOf="@id/imgBackEditReminder"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_10sdp" />

        <EditText
            android:id="@+id/edtTitleEditReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="@dimen/_17ssp"
            android:background="@null"
            android:hint="@string/enter_here"
            android:textColorHint="@color/colorTextHint"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/txtTemp"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            />

        <EditText
            android:id="@+id/edtDescriptionEditReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:inputType="textMultiLine"
            android:hint="@string/enter_here"
            android:textColorHint="@color/colorTextHint"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/edtTitleEditReminder"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@null"
            android:visibility="gone"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_addDescriptionReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/edtDescriptionEditReminder">

            <ImageView
                android:id="@+id/imgDescriptionEditReminder"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/txtNameDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_description"
                android:textSize="@dimen/_15ssp"
                android:gravity="center_vertical"
                android:textColor="@color/colorIcon"
                android:layout_marginLeft="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@id/imgDescriptionEditReminder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_editDateTimeReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_addDescriptionReminder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imgDateTimeEditReminder"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_datetime"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/txtDateTimeEditReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_date_time"
                android:textSize="@dimen/_16ssp"
                android:gravity="center_vertical"
                android:textColor="@color/colorIcon"
                android:layout_marginLeft="@dimen/_8sdp"
                app:layout_constraintStart_toEndOf="@id/imgDateTimeEditReminder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_doneBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_content_Edit_Reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorBottombarhome">

        <TextView
            android:id="@+id/txtMarkDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15ssp"
            android:text="@string/mark_completed"
            android:textColor="@color/colorNoteColor2"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="@dimen/_20sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>