<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/_20sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp">
            <TextView
                android:id="@+id/txtMyNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/my_notes"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgSetLayoutNote"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_stack"
                app:tint="@color/colorIcon"
                android:layout_marginTop="@dimen/_10sdp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/layoutSearchNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/backgroud_search"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">

            <ImageView
                android:id="@+id/imgSearch"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search"
                app:tint="@color/colorSearchIcon">
            </ImageView>

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/search_notes"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textCapSentences"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13sdp"
                android:layout_marginLeft="@dimen/_12sdp" />
        </LinearLayout>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lvNoteData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/_7sdp" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/btnAddNote"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/_8sdp"
        android:src="@drawable/ic_add"
        app:tint="@color/colorNoteColor2"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/backgroud_add_button"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>