<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.AddRemiderScreen">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_anchor="@+id/scrollView2"
        app:layout_anchorGravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imgBackR"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcon" />

            <ImageView
                android:id="@+id/imgSaveR"
                android:layout_width="@dimen/_33sdp"
                android:layout_height="@dimen/_33sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorNoteColor2" />


            <ImageView
                android:id="@+id/imgTimeR"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="@dimen/_15sdp"
                android:src="@drawable/ic_set_time"
                app:layout_constraintEnd_toStartOf="@+id/imgSaveR"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcon" />

            <EditText
                android:id="@+id/edtTitleR"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@null"
                android:capitalize="characters"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textCapSentences"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintTop_toBottomOf="@id/imgBackR"
                tools:ignore="Deprecated"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/edtDescriptionR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/contentR"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine|textCapSentences"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTitleR" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/rimgDelete"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:src="@drawable/ic_delete"
        app:tint="@color/colorNoteColor3"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>